--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "framer-motion": "^11.0.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-text-fill-stroke": "^1.1.2",
+    "tailwindcss-text-fill-stroke": "^1.1.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
