--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0",
-    "tailwindcss-text-fill": "^0.2.0"
+    "tailwindcss-text-fill": "^0.2.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "framer-motion": "^11.0.3",
     "postcss": "^8.4.33",
+    "react-remove-scroll": "^2.5.7",
     "tailwindcss": "^3.4.1",
     "tailwindcss-text-fill-stroke": "^1.1.0",
     "typescript": "^5.3.3",
