--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-email/button": "0.0.13",
+    "@types/react-slick": "^0.23.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss-text-fill": "^0.2.0",
     "zustand": "^4.5.0"
   },
