--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-slick": "^0.30.1",
     "zustand": "^4.5.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.17"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
