--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve dist -s -n -L $PORT"
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@types/react-slick": "^0.23.13",
